# php_mt_seed.rs

./: Cargo.toml  LICENSE-MIT  README.md  mt_rand.php
src/: main.rs  mt19937.wgsl  shader.wgsl
